--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write './src/**/*.{vue,js,ts,jsx,tsx}'"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.3.11",
     "vue-i18n": "^9.9.0",
